--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Sound Alert</title>
+  <title>best video 2025</title>
   <style>
     /* Basic reset for styling */
     * {
