--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ src="https://www.facebook.com/tr?id=1273504450419238&ev=PageView&noscript=1"
     body, html {
       height: 100%;
       margin: 0;
-      background: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgj2Vhc8qCnN-q5W77d7AoL25_mRU-iUrtLcKJPYpWe4F9CmcCvzfZb9Gwx2BBmY98k-4SSun9n2IjP6TJfsmpI7Kc8nm_uQJOl_8WrcdaibBqV5jNSM4G_8sT16n-VJLAooC81u2KmH805tLqm3ZkSD5pd4cDaPWrEMk5lgGdfnD1h0qtfbG_dzKhKZUo/s1691/IMG_3697.PNG') no-repeat center center fixed;
+      background: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh-Rx3Sf-G5Covq5OC2XMqM6pBGplzGSZoUBXgXPX0kF7trr4CZzpibCbz45StBdpfXDmFNK0qKDt6oUUGuaXyMt1dtgPM52n4vQ_KnK1-3q1LbuI3_9IYKr0FVKGOTPzJMuuWiXlda0LdBntnPyo80E5KV4P_IHI_mCsS4mBQEmzYvv2mNKARt8GExdWE/s1974/IMG_2670%20copy.png') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       align-items: center;
